# leearn

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  README.md  package-lock.json  setup_db.sh  test_api.sh
backend/migrations/: 001_initial.sql
backend/old_js_backend/: package.json
backend/old_js_backend/src/: app.ts
backend/old_js_backend/src/controllers/: contentController.ts
backend/old_js_backend/src/models/: Comment.ts  Friendship.ts  User.ts
backend/old_js_backend/src/routes/: contents.ts  index.ts  users.ts
backend/src/: database.rs  main.rs
backend/src/controllers/: aiController.ts  userController.ts
backend/src/handlers/: ai_handler.rs  content_handler.rs  mod.rs  user_handler.rs
backend/src/models/: Content.ts  comment.rs  content.rs  friendship.rs  mod.rs  user.rs
backend/src/routes/: ai.ts  ai_routes.rs  content_routes.rs  mod.rs  user_routes.rs
backend/src/services/: aiService.ts
docs/: API接口设计.md  数据库设计.md  结构设计.md  详细设计文档.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AIChat.tsx  Card.tsx  LearningScene3D.tsx  Navbar.tsx
frontend/src/pages/: Home.tsx  NotFound.tsx  Test.tsx
frontend/src/pages/ai/: Chat.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/content/: Detail.tsx  Publish.tsx
frontend/src/pages/courses/: Courses.tsx
frontend/src/pages/learning/: Learning.tsx
frontend/src/pages/profile/: Profile.tsx
frontend/src/pages/search/: Search.tsx
frontend/src/styles/: index.css
